tests/errors/test_37.xpp
// Enum declared with no fields

enum Empty {}

fn main() void {}
